--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 fastapi==0.104.1
 uvicorn==0.24.0
-pandas==2.1.3
-numpy==1.26.2
-scikit-learn==1.3.2
+pandas==2.2.0
+numpy==1.26.4
+scikit-learn==1.4.0
 joblib==1.3.2
 pydantic==2.5.0
-pyarrow==14.0.1
+pyarrow==15.0.0
 requests==2.31.0
-streamlit==1.28.2
+streamlit>=1.29.0
